OAA website responsiveness fixes
- Removes multiple inclusions of the main h1 rule to allow for downscaling on the font size on small screens
- Adds in .responsive-video for automatic flexible videos (Maxes at 900px for now, might need to be adjusted)
- Updated IFrame embed markup to enable flexible embed capability and to provide no support fallback text linking to the video
- Updates the meta viewport to define that the initial scaling is set to 100% natural relative to device settings (Fixes some oddities where a device might zoom in websites by default)

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -5,12 +5,29 @@
 #banner {
   border-bottom: none;
   margin-top: -20px;
+
+  h1 {
+    font-size:      60px;
+    line-height:    1;
+    letter-spacing: -1px;
+  }
+
+  @media screen and (max-width: 500px) {
+    margin-bottom: 20px;
+
+    h1 {
+      font-size: 32px;
+      margin-top: 0;
+    }
+  }
 }
 
-#banner h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
+body {
+  & > footer {
+    @media screen and (max-width: 500px) {
+      margin-top: 20px;
+    }
+  }
 }
 
 .hero-unit {
@@ -24,4 +41,38 @@
 
 .navbar-text {
   margin-left: 15px;
+}
+
+.responsive-video {
+  position:      relative;
+  width:         100%;
+  max-width:     900px;
+  margin-left:   auto;
+  margin-right:  auto;
+  margin-bottom: 20px;
+  display:       block;
+
+  &::after {
+    content:     '';
+    position:    static;
+    box-sizing:  border-box;
+    width:       100%;
+    display:     block;
+    padding-top: 56.25%;
+  }
+
+  & > iframe,
+  & > video,
+  & > embed {
+    position:   absolute;
+    top:        0;
+    left:       0;
+    width:      1px; // IOS
+    height:     1px; //IOS
+    min-width:  100%;
+    min-height: 100%;
+    margin:     0; // Reset frame or embed options the UA might have by default
+    padding:    0; // Reset frame or embed options the UA might have by default
+    border:     0; // Reset frame or embed options the UA might have by default
+  }
 }
