--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">oaa</a>
+      <a href="/" class="navbar-left"><img src="https://github.com/OpenAngelArena/oaa/blob/master/docs/.images/logo.png?raw=true" alt="OAA" style="padding-right:10px;"></a>
     </div>
     <div uib-collapse="$ctrl.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
